--- a/index.html
+++ b/index.html
@@ -7,6 +7,21 @@
     <title>Mergaite</title>
 </head>
 <body>
-    CONTENT
+    <header>
+        <img src="#" alt="Logotipas">
+        <nav>
+            <a href="#">Home</a>
+            <a href="#">Tracks</a>
+            <a href="#">Library</a>
+            <a href="#">Comunity</a>
+            <a href="#">Sign In</a>
+        </nav>
+    </header>
+    <main>
+        <div><h1>404</h1>
+            <p>The link is broken or the page is moved</p>
+        </div>
+        <img src="#" alt="Liudnas emoji su Mergina">
+    </main>
 </body>
 </html>
