--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <img src="#" alt="Logotipas">
+        <img src="Logo.png" alt="Logotipas">
         <nav>
             <a href="#">Home</a>
             <a href="#">Tracks</a>
@@ -21,7 +21,7 @@
         <div><h1>404</h1>
             <p>The link is broken or the page is moved</p>
         </div>
-        <img src="#" alt="Liudnas emoji su Mergina">
+        <img src="EmojiSumergaite.png" alt="Liudnas emoji su Mergina">
     </main>
 </body>
 </html>
