--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <img src="Logo.png" alt="Logotipas">
+        <img src="logo.png" alt="Logotipas">
         <nav>
             <a href="#">Home</a>
             <a href="#">Tracks</a>
