--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div><h1>404</h1>
             <p>The link is broken or the page is moved</p>
         </div>
-        <img src="EmojiSumergaite.png" alt="Liudnas emoji su Mergina">
+        <img src="emojisumergaite.png" alt="Liudnas emoji su Mergina">
     </main>
 </body>
 </html>
