--- a/index.html
+++ b/index.html
@@ -20,9 +20,16 @@
     </header>
     <main>
         <div><h1>404</h1>
-            <p>The link is broken or the page is moved</p>
+            <p>The link is broken or the page has been moved.</p>
         </div>
         <img src="./img/emojisumergaite.png" alt="Liudnas emoji su Mergina">
     </main>
 </body>
 </html>
+
+
+
+<!-- komentarai su ctrl+k ctrl+c
+
+
+ -->
